@startuml

package Views {

    package Match3 as "Match"{
        boundary MatchView
        boundary PlayerView
        boundary GameView
        boundary GoalView
    }

    package Menu2 as "Menu"{
        boundary MenuView
        boundary ActionView
    }

    package Board2 as "Board"{
        boundary BoardView
        boundary PositionView
        boundary PieceView
        boundary DoublingCubeView
    }

    MatchView *--> GameView
    MatchView *--> GoalView
    MatchView *--> PlayerView
    GameView *--> Board2
    BoardView *--> DoublingCubeView
    MenuView *--> ActionView
    BoardView *--> PositionView
    PositionView *--> PieceView

}

package Models {

    package Match4 as "Match"{
        entity Match
        entity Player
        entity Game
        entity Goal
    }

    package Board3 as "Board"{
        entity Board
        entity Position
        entity Piece
        entity DoublingCube
    }



    Match *-down-> Player
    Match *-down-> Goal
    Match *-down-> Game
    Board *-down-> DoublingCube
    Game *-down-> Board
    Board *-down-> Position
    Position *-down-> Piece
}

package Controllers {

    package Menu {
        control MenuController
        control ResponseBetController
        control RequestBetController
        control MovePieceController
        control RollDiceController

        RequestBetController ..> MenuController
        ResponseBetController ..> MenuController
        MovePieceController ..> MenuController
        RollDiceController ..> MenuController

    }

    package Match2 as "Match" {
        control StartController
        control ExitController
    }

}

Views -down-> Controllers

Controllers -down-> Models

@enduml
